unpackaged/main/default/objects/Case/fields/Access_Approved__c.field-meta.xml
<CustomField>
    <fullName>Access_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Approved</label>
    <type>Checkbox</type>
</CustomField>