unpackaged/main/default/objects/Case/fields/Bill_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Bill to Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Bill To Customer)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>