unpackaged/main/default/objects/Case/fields/Case_Identity__c.field-meta.xml
<CustomField>
    <fullName>Case_Identity__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Case Identity</label>
    <type>AutoNumber</type>
</CustomField>