unpackaged/main/default/objects/Case/fields/Case_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Integration_ID__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Case Integration ID</label>
    <type>AutoNumber</type>
</CustomField>