unpackaged/main/default/objects/Case/fields/CaseDueDate__c.field-meta.xml
<CustomField>
    <fullName>CaseDueDate__c</fullName>
    <description>Due date for Case only, when the case/request needs to be actioned by</description>
    <label>Case Due Date</label>
    <type>Date</type>
</CustomField>