unpackaged/main/default/objects/Case/fields/CaseID__c.field-meta.xml
<CustomField>
    <fullName>CaseID__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>CaseID</label>
    <type>AutoNumber</type>
</CustomField>