unpackaged/main/default/objects/Case/fields/ClientRef1__c.field-meta.xml
<CustomField>
    <fullName>ClientRef1__c</fullName>
    <description>Client Reference Number</description>
    <label>Client Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>