unpackaged/main/default/objects/Case/fields/CSR_Comments__c.field-meta.xml
<CustomField>
    <fullName>CSR_Comments__c</fullName>
    <label>CSR Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>