unpackaged/main/default/objects/Case/fields/DayRemain__c.field-meta.xml
<CustomField>
    <fullName>DayRemain__c</fullName>
    <formula>IF(ISBLANK(TEXT(CaseDueDate__c)),&quot;Need Due Date&quot;,IF(TEXT(CaseDueDate__c - TODAY())&gt;=TEXT(0),TEXT(CaseDueDate__c - TODAY()),&quot;Late&quot;))</formula>
    <inlineHelpText>Remaining time for managing the Case</inlineHelpText>
    <label>Days Remain</label>
    <type>Text</type>
</CustomField>