unpackaged/main/default/objects/Case/fields/Deduplication_Key__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Key__c</fullName>
    <formula>LOWER(Subject) &amp; &quot;-&quot; &amp; SuppliedEmail &amp; &quot;-&quot; &amp; TEXT(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deduplication Key</label>
    <type>Text</type>
</CustomField>