unpackaged/main/default/objects/Case/fields/Did_you_check_surrounding_areas_for_tech__c.field-meta.xml
<CustomField>
    <fullName>Did_you_check_surrounding_areas_for_tech__c</fullName>
    <label>Did you check surrounding areas for tech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>