unpackaged/main/default/objects/Case/fields/Email_Received__c.field-meta.xml
<CustomField>
    <fullName>Email_Received__c</fullName>
    <label>Email Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>