unpackaged/main/default/objects/Case/fields/Inbox__c.field-meta.xml
<CustomField>
    <fullName>Inbox__c</fullName>
    <description>Identifies Incoming Email</description>
    <label>Inbox</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Message</fullName>
            </value>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Forwarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>