unpackaged/main/default/objects/Case/fields/Keywords_Found__c.field-meta.xml
<CustomField>
    <fullName>Keywords_Found__c</fullName>
    <label>Keywords Found</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>