unpackaged/main/default/objects/Case/fields/Match_Found__c.field-meta.xml
<CustomField>
    <fullName>Match_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Found</label>
    <type>Checkbox</type>
</CustomField>