unpackaged/main/default/objects/Case/fields/Matched_Queues__c.field-meta.xml
<CustomField>
    <fullName>Matched_Queues__c</fullName>
    <label>Matched Queues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>