unpackaged/main/default/objects/Case/fields/No_Technicians_Found__c.field-meta.xml
<CustomField>
    <fullName>No_Technicians_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Technicians Found</label>
    <type>Checkbox</type>
</CustomField>