unpackaged/main/default/objects/Case/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Open Date</label>
    <type>DateTime</type>
</CustomField>