unpackaged/main/default/objects/Case/fields/Out_of_State_Techs__c.field-meta.xml
<CustomField>
    <fullName>Out_of_State_Techs__c</fullName>
    <label>Out of State Techs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>