unpackaged/main/default/objects/Case/fields/Prior_Queue_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Queue_Value__c</fullName>
    <label>Prior Queue Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>