unpackaged/main/default/objects/Case/fields/Queue_Type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Type__c</fullName>
    <label>Queue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>