unpackaged/main/default/objects/Case/fields/Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Reference_1__c</fullName>
    <label>Reference 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>