unpackaged/main/default/objects/Case/fields/Requester_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Requester_Phone_Number__c</fullName>
    <label>Requester Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>