unpackaged/main/default/objects/Case/fields/Reset_Password_For__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reset Password For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>