unpackaged/main/default/objects/Case/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Managerial Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Resource Brought From Out Of Territory</fullName>
            </value>
            <value>
                <fullName>Prioritized Over Another Customer</fullName>
            </value>
            <value>
                <fullName>Managerial Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Director Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Sr. Manager Escalation Needed</fullName>
            </value>
            <value>
                <fullName>General Manager Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Resolved – Configuration Updated</fullName>
            </value>
            <value>
                <fullName>Resolved – Code Fix Deployed</fullName>
            </value>
            <value>
                <fullName>Resolved – User Error</fullName>
            </value>
            <value>
                <fullName>Resolved – Process Clarified</fullName>
            </value>
            <value>
                <fullName>Resolved – Access Restored</fullName>
            </value>
            <value>
                <fullName>Resolved – Third-Party Issue</fullName>
            </value>
            <value>
                <fullName>Resolved – Data Corrected</fullName>
            </value>
            <value>
                <fullName>Resolved - Workaround Provided</fullName>
            </value>
            <value>
                <fullName>Resolved - Works As Designed</fullName>
            </value>
            <value>
                <fullName>Resolved - No Issue Found</fullName>
            </value>
            <value>
                <fullName>Resolved - Feature Request Logged</fullName>
            </value>
            <value>
                <fullName>Not Resolved - Further Investigation</fullName>
            </value>
            <value>
                <fullName>Not Resolved - Referred to Another Team</fullName>
            </value>
            <value>
                <fullName>Not Resolved - Cancelled By User</fullName>
            </value>
            <value>
                <fullName>Not Resolved - Duplicate Ticket</fullName>
            </value>
            <value>
                <fullName>Not Resolved - Escalated</fullName>
            </value>
            <value>
                <fullName>Not Resolved - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>