unpackaged/main/default/objects/Case/fields/Resolution_Comments__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Comments__c</fullName>
    <label>Resolution Comments</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>