unpackaged/main/default/objects/Case/fields/Routing_Rule_Link__c.field-meta.xml
<CustomField>
    <fullName>Routing_Rule_Link__c</fullName>
    <label>Routing Rule Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>