unpackaged/main/default/objects/Case/fields/Rule_Found__c.field-meta.xml
<CustomField>
    <fullName>Rule_Found__c</fullName>
    <label>Rule Found</label>
    <length>255</length>
    <type>Text</type>
</CustomField>