unpackaged/main/default/objects/Case/fields/SA_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Number__c</fullName>
    <label>SA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>