unpackaged/main/default/objects/Case/fields/Site_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Name__c</fullName>
    <label>Site Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>