unpackaged/main/default/objects/Case/fields/Site_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Phone_Number__c</fullName>
    <label>Site Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>