unpackaged/main/default/objects/Case/fields/SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>SLA_Type__c</fullName>
    <label>SLA Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>