unpackaged/main/default/objects/Case/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <label>SOW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>