unpackaged/main/default/objects/Case/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Current state of the Case in the workflow process</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Today</fullName>
                <color>#FF9900</color>
                <label>Action Today</label>
            </value>
            <value>
                <fullName>Admin</fullName>
                <color>#A845DC</color>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Awaiting Quote</fullName>
                <color>#FF99FF</color>
                <label>Awaiting Quote</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <color>#999999</color>
                <label>Cancellation</label>
            </value>
            <value>
                <fullName>Checked</fullName>
                <color>#3366FF</color>
                <label>Checked</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <color>#000000</color>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Customer Chatter</fullName>
            </value>
            <value>
                <fullName>Customer Escalated</fullName>
                <color>#FF0000</color>
                <label>Customer Escalated</label>
            </value>
            <value>
                <fullName>Damages</fullName>
            </value>
            <value>
                <fullName>Escalated To Tier 2</fullName>
            </value>
            <value>
                <fullName>Escalation Resolved</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
                <color>#A845DC</color>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#33CCFF</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Internally Escalate</fullName>
                <color>#FF0000</color>
                <label>Internally Escalate</label>
            </value>
            <value>
                <fullName>Jeopardy</fullName>
            </value>
            <value>
                <fullName>Lift Required</fullName>
                <color>#993399</color>
                <label>Lift Required</label>
            </value>
            <value>
                <fullName>Locked On-Hold</fullName>
            </value>
            <value>
                <fullName>MTTR</fullName>
                <color>#FF0000</color>
                <label>MTTR</label>
            </value>
            <value>
                <fullName>Needs To Be Scheduled</fullName>
                <color>#B6E32E</color>
                <label>Needs To Be Scheduled</label>
            </value>
            <value>
                <fullName>New</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>No Technicians Found</fullName>
            </value>
            <value>
                <fullName>Pending COI</fullName>
                <color>#FF99FF</color>
                <label>Pending COI</label>
            </value>
            <value>
                <fullName>Reschedule</fullName>
                <color>#33FF33</color>
                <label>Reschedule</label>
            </value>
            <value>
                <fullName>SEV 1</fullName>
                <color>#FF0000</color>
                <label>SEV 1</label>
            </value>
            <value>
                <fullName>SEV 2</fullName>
                <color>#FF6666</color>
                <label>SEV 2</label>
            </value>
            <value>
                <fullName>SEV 3</fullName>
                <color>#FFCC33</color>
                <label>SEV 3</label>
            </value>
            <value>
                <fullName>SEV 4</fullName>
                <color>#FFCC66</color>
                <label>SEV 4</label>
            </value>
            <value>
                <fullName>SEV 5</fullName>
                <color>#FFFF66</color>
                <label>SEV 5</label>
            </value>
            <value>
                <fullName>Shipping</fullName>
                <color>#FF99FF</color>
                <label>Shipping</label>
            </value>
            <value>
                <fullName>Site Access Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>