unpackaged/main/default/objects/Case/fields/Sub_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sub_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sub Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Sub Customer)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>