unpackaged/main/default/objects/Case/fields/SubCustomer_Match__c.field-meta.xml
<CustomField>
    <fullName>SubCustomer_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SubCustomer Match</label>
    <type>Checkbox</type>
</CustomField>