unpackaged/main/default/objects/Case/fields/SubCustomer_Name__c.field-meta.xml
<CustomField>
    <fullName>SubCustomer_Name__c</fullName>
    <label>SubCustomer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>