unpackaged/main/default/objects/Case/fields/TimeInQue__c.field-meta.xml
<CustomField>
    <fullName>TimeInQue__c</fullName>
    <description>The duration of the Case in minutes since being created</description>
    <formula>(NOW()- CreatedDate)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration is in Minutes</inlineHelpText>
    <label>Time In Que (Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>