unpackaged/main/default/objects/Case/fields/Within_State_Techs__c.field-meta.xml
<CustomField>
    <fullName>Within_State_Techs__c</fullName>
    <label>Within State Techs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>