unpackaged/main/default/objects/Case/recordTypes/Child_Case.recordType-meta.xml
<RecordType>
    <fullName>Child_Case</fullName>
    <active>true</active>
    <businessProcess>EmailtoCase</businessProcess>
    <description>This is for Tier 2 Child Cases</description>
    <label>Child Case</label>
</RecordType>