unpackaged/main/default/objects/Case/recordTypes/EmailtoCase.recordType-meta.xml
<RecordType>
    <fullName>EmailtoCase</fullName>
    <active>true</active>
    <businessProcess>EmailtoCase</businessProcess>
    <label>EmailtoCase</label>
</RecordType>