unpackaged/main/default/objects/Case/recordTypes/FSL_Support.recordType-meta.xml
<RecordType>
    <fullName>FSL_Support</fullName>
    <active>true</active>
    <businessProcess>FSL Support</businessProcess>
    <label>FSL Support</label>
</RecordType>