unpackaged/main/default/objects/Case/validationRules/Contact_or_Requestor_name_exists.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_or_Requestor_name_exists</fullName>
    <active>false</active>
    <errorConditionFormula>ContactId = NULL &amp;&amp;  Requestor_E_Mail__c = NULL</errorConditionFormula>
    <errorMessage>Please enter Requestor email or select a Contact</errorMessage>
</ValidationRule>