unpackaged/main/default/objects/Case/validationRules/Must_have_a_contact_or_requestor_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_a_contact_or_requestor_email</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(ContactId)|| ISNULL(Requestor_E_Mail__c)</errorConditionFormula>
    <errorMessage>Please enter a Contact or Requestor email</errorMessage>
</ValidationRule>