unpackaged/main/default/objects/Case/listViews/Admin_Case.listView-meta.xml
<ListView>
    <fullName>Admin_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin</label>
    <queue>Admin</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>