unpackaged/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>Stage__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Identity__c</columns>
    <columns>Sub_Customer__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Routing_Rule_Link__c</columns>
    <columns>Rule_Found__c</columns>
    <columns>Match_Found__c</columns>
    <columns>Matched_Queues__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Cases</label>
    <sharedTo>
        <group>Area_Managers</group>
        <group>Dispatcher_Group</group>
    </sharedTo>
</ListView>