unpackaged/main/default/objects/Case/listViews/Auto_Close.listView-meta.xml
<ListView>
    <fullName>Auto_Close</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Auto Close</label>
    <queue>Auto_Close</queue>
</ListView>