unpackaged/main/default/objects/Case/listViews/Auto_Close_Case.listView-meta.xml
<ListView>
    <fullName>Auto_Close_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Auto Close</label>
    <queue>Auto_Close</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>