unpackaged/main/default/objects/Case/listViews/Cases_assigned_to_Susie.listView-meta.xml
<ListView>
    <fullName>Cases_assigned_to_Susie</fullName>
    <columns>Open_Date__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CaseID__c</columns>
    <columns>Case_Identity__c</columns>
    <columns>CaseDueDate__c</columns>
    <columns>Code__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Stage__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Inbox__c</columns>
    <columns>DayRemain__c</columns>
    <columns>Sub_Customer__c</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EmailtoCase</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>Merritt</value>
    </filters>
    <label>Cases assigned to Susie</label>
</ListView>