unpackaged/main/default/objects/Case/listViews/CBTS_Case.listView-meta.xml
<ListView>
    <fullName>CBTS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CBTS</label>
    <queue>CBTS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>