unpackaged/main/default/objects/Case/listViews/Comcast_BID.listView-meta.xml
<ListView>
    <fullName>Comcast_BID</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Sub_Customer__c</columns>
    <columns>Code__c</columns>
    <columns>Stage__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Inbox__c</columns>
    <columns>CaseDueDate__c</columns>
    <columns>DayRemain__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>New Comcast Bid</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EmailtoCase</value>
    </filters>
    <label>Comcast BID</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Dispatch_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>