unpackaged/main/default/objects/Case/listViews/Comcast_Case.listView-meta.xml
<ListView>
    <fullName>Comcast_Case</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CaseDueDate__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Comcast</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.EmailtoCase</value>
    </filters>
    <label>Comcast</label>
    <sharedTo>
        <role>Dispatch_Manager</role>
        <role>Dispatch_Team_Leads_Project_Coordinators</role>
        <role>Dispatcher</role>
        <role>Order_Entry_Only</role>
        <role>Resource_Manager</role>
    </sharedTo>
</ListView>